# GNN-CODE-INTELLIGENCE-SYSTEM

./: .gitignore  CURRENT_STATUS_SUMMARY.md  Cargo.toml  FINAL_DEPLOYMENT_STATUS.md  GITHUB_ACTIONS_GUIDE.md  GITHUB_ULTRA_SCALE_GUIDE.md  MAXIMUM_GITHUB_SCALE.md  README.md  ULTRA_MASSIVE_SWARM_FINAL_REPORT.md
.github/workflows/: benchmarks.yml  generate-training-data.yml  integration-tests.yml  ludicrous-mode-orchestrator.yml  test-single-job.yml  ultra-massive-generation.yml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs
crates/cli/src/commands/: check.rs  compress.rs  generate.rs  info.rs  init.rs  mod.rs  parse.rs  sweep.rs  train.rs
crates/gnn-core/: Cargo.toml
crates/gnn-core/src/: compression.rs  inference.rs  layers.rs  lib.rs  model.rs  tensor.rs  training.rs
crates/gnn-experts/: Cargo.toml
crates/gnn-experts/src/: lib.rs  registry.rs  trait_.rs
crates/gnn-experts/src/experts/: mod.rs  rust.rs
crates/gnn-experts/src/mega-patterns/: DEPLOYMENT_SUMMARY.txt  README.md  analysis.rs  api_misuse.rs  code_smells.rs  concurrency.rs  core.rs  design_patterns.rs  error_handling.rs  fix_generation.rs  memory_safety.rs  ml_detectors.rs  mod.rs  pattern_database.rs  performance.rs  security.rs
crates/gnn-experts/src/mega-patterns/languages/: c.rs  clojure.rs  cpp.rs  csharp.rs  dart.rs  elixir.rs  erlang.rs  go.rs  haskell.rs  java.rs  javascript.rs  julia.rs  kotlin.rs  lua.rs  mod.rs  nim.rs  ocaml.rs  php.rs  python.rs  r.rs  ruby.rs  rust.rs  scala.rs  swift.rs  typescript.rs
crates/gnn-experts/src/patterns/: c_patterns.rs  cpp_patterns.rs  go_patterns.rs  java_patterns.rs  javascript_patterns.rs  mod.rs  python_patterns.rs  rust_patterns.rs  typescript_patterns.rs
crates/gnn-head/: Cargo.toml
crates/gnn-head/src/: lib.rs  merger.rs  router.rs
crates/llm-bridge/: Cargo.toml
crates/llm-bridge/src/: injection.rs  lib.rs  main.rs  ollama.rs  openai.rs  postprocess.rs  projection.rs
crates/parser/: Cargo.toml
crates/parser/src/: graph.rs  lib.rs  main.rs
crates/parser/src/languages/: c.rs  cpp.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust.rs  swift.rs  typescript.rs
crates/sweep/: Cargo.toml
crates/sweep/src/: cache.rs  filter.rs  github.rs  lib.rs  main.rs  output.rs
crates/wasm-runtime/: Cargo.toml
crates/wasm-runtime/src/: bindings.rs  bridge.rs  lib.rs  memory.rs
examples/mega-repos/: README.md  generate_mega_repos.py  status.py
mega-tests/: Cargo.toml
mega-tests/generators/: e2e_tests.rs  fuzz_tests.rs  integration_tests.rs  main.rs  performance_tests.rs  security_tests.rs  unit_tests.rs
mega-tests/infrastructure/: coverage.rs  lib.rs  mutation.rs  parallel_runner.rs  reporting.rs  runner.rs  test_database.rs
