[workspace]
resolver = "2"
members = [
    "crates/sweep",
    "crates/parser",
    "crates/gnn-core",
    "crates/gnn-head",
    "crates/gnn-experts",
    "crates/wasm-runtime",
    "crates/llm-bridge",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/gnn-code-intel"
authors = ["GNN Code Intelligence Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Graphs
petgraph = "0.6"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Parallelism
rayon = "1.8"

# Random numbers
rand = "0.8"

# Tree-sitter for parsing
tree-sitter = "0.20"

# WASM bindings
wasm-bindgen = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "parsing_benchmarks"
harness = false

[[bench]]
name = "gnn_benchmarks"
harness = false

[[bench]]
name = "pattern_detection_benchmarks"
harness = false

[[bench]]
name = "end_to_end_benchmarks"
harness = false

[[bench]]
name = "wasm_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
