[package]
name = "gnn-core"
version = "0.1.0"
edition = "2021"
authors = ["GNN Code Intelligence Team"]
description = "Pure Rust GNN implementation with GraphSAGE, training, and semantic compression"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = { version = "0.8", features = ["small_rng"] }
petgraph = { version = "0.6", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
