[package]
name = "gnn-parser"
version = "0.1.0"
edition = "2021"
authors = ["GNN Code Intelligence Team"]
description = "Multi-language AST parser with universal graph schema"

[[bin]]
name = "gnn-parser"
path = "src/main.rs"

[lib]
name = "gnn_parser"
path = "src/lib.rs"

[dependencies]
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-c = "0.20"
petgraph = "0.6"
rayon = "1.7"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
dashmap = "5.5"

[dev-dependencies]
tempfile = "3.8"
