[package]
name = "sweep"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sweep"
path = "src/main.rs"

[lib]
name = "sweep"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.30", features = ["bundled"] }
csv = "1.3"
anyhow = "1.0"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.8"
quickcheck = "1.0"
quickcheck_macros = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
mockito = "1.2"
tokio-test = "0.4"

[[bench]]
name = "benchmarks"
harness = false
