[package]
name = "gnn-wasm-runtime"
version = "0.1.0"
edition = "2021"
authors = ["GNN Code Intelligence Team"]
description = "WASM runtime for GNN-based code intelligence"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
thiserror = "1.0"
getrandom = { version = "0.2", features = ["js"] }

# For WASM console logging
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = "s"
